dist/1.0/bin/sample/retrieveUnpackaged/objects/Query__c.object
<CustomObject>
    <description>Solution base</description>
    <fields>
        <fullName>Address_A__c</fullName>
        <label>Address A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_B__c</fullName>
        <label>Address B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_of_copper_circuits__c</fullName>
        <label>Amount of copper circuits</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bandwidth_kbps__c</fullName>
        <label>Bandwidth [kbps]</label>
        <picklist>
            <picklistValues>
                <fullName>128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4096</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6144</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8192</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>155Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>622Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,5Gb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10Gb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_1__c</fullName>
        <label>Branch 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_2__c</fullName>
        <label>Branch 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sieciowe i klienckie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <defaultValue>&quot;Proszę o pozostawienie pętli fizycznej po stronie klienta.&quot;</defaultValue>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Status__c</fullName>
        <label>Construction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Brak decyzji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W budowie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wybudowane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rezygnacja</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_response__c</fullName>
        <label>Date of response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_time_weeks__c</fullName>
        <label>Delivery time [weeks]</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_km__c</fullName>
        <label>Distance [km]</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructing__c</fullName>
        <label>Instructing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queries_for_TP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loc1_Contact__c</fullName>
        <label>Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_Contact_phone_number__c</fullName>
        <label>Contact phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loc1_Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loc1_Ending__c</fullName>
        <label>Ending</label>
        <picklist>
            <picklistValues>
                <fullName>Do szafy GTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do głowicy budynku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do przełącznicy cyfrowej DDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wykonanie instalacji wewnętrznej przez TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do sieci innego operatora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc1_Ending_description__c</fullName>
        <label>Ending description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loc1_Interface__c</fullName>
        <label>Interface</label>
        <picklist>
            <picklistValues>
                <fullName>G.703</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V.35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X.21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gigabit Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 1G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 4G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 10G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Gigabit Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc1_Number__c</fullName>
        <label>Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zakończenie A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zakończenie B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc1_Type_of_FO_cable__c</fullName>
        <label>Type of FO cable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_Type_of_ending__c</fullName>
        <label>Type of ending</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc1_Type_of_secondary_sewage__c</fullName>
        <label>Type of secondary sewage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_ZIPcode__c</fullName>
        <label>ZIP code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_city__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc1_name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_Contact__c</fullName>
        <label>Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_Contact_phone_number__c</fullName>
        <label>Contact phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loc2_Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loc2_Ending__c</fullName>
        <label>Ending</label>
        <picklist>
            <picklistValues>
                <fullName>Do szafy GTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do głowicy budynku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do przełącznicy cyfrowej DDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wykonanie instalacji wewnętrznej przez TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do sieci innego operatora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc2_Ending_description__c</fullName>
        <label>Ending description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loc2_Interface__c</fullName>
        <label>Interface</label>
        <picklist>
            <picklistValues>
                <fullName>G.703</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V.35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X.21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gigabit Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 1G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 4G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 10G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Gigabit Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc2_Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_Number__c</fullName>
        <label>Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zakończenie A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zakończenie B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc2_Type_of_FO_cable__c</fullName>
        <label>Type of FO cable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_Type_of_ending__c</fullName>
        <label>Type of ending</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc2_Type_of_secondary_sewage__c</fullName>
        <label>Type of secondary sewage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc2_ZIPCode__c</fullName>
        <label>ZIP code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_Contact__c</fullName>
        <label>Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_Contact_phone_number__c</fullName>
        <label>Contact phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loc3_Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loc3_Ending__c</fullName>
        <label>Ending</label>
        <picklist>
            <picklistValues>
                <fullName>Do szafy GTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do głowicy budynku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do przełącznicy cyfrowej DDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wykonanie instalacji wewnętrznej przez TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do sieci innego operatora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc3_Ending_description__c</fullName>
        <label>Ending description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loc3_Interface__c</fullName>
        <label>Interface</label>
        <picklist>
            <picklistValues>
                <fullName>G.703</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V.35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X.21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gigabit Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 1G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 4G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC 10G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STM-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Gigabit Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc3_Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_Number__c</fullName>
        <label>Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zakończenie A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zakończenie B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rozgałęzienie IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc3_Type_of_FO_cable__c</fullName>
        <label>Type of FO cable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_Type_of_ending__c</fullName>
        <label>Type of ending</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loc3_Type_of_secondary_sewage__c</fullName>
        <label>Type of secondary sewage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc3_ZIPcode__c</fullName>
        <label>ZIP code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lp__c</fullName>
        <label>Lp</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <label>Monthly</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_WT__c</fullName>
        <label>No WT</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Off__c</fullName>
        <label>One Off</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_cost__c</fullName>
        <description>Solution Base. Link to parent Project cost</description>
        <label>Project cost</label>
        <referenceTo>Project_cost__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_sent_Date__c</fullName>
        <label>Request sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>W weryfikacji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pozytywny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negatywny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Częściowo negatywny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasumpcja częściowo neg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anulowane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W przygotowaniu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W przygotowaniu (nowe)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structural__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structural / no Structural</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_verification_result__c</fullName>
        <label>Technical verification result</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>The_expected_contract_duration_end__c</fullName>
        <label>The expected contract duration (end)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>The_expected_contract_duration_start__c</fullName>
        <label>The expected contract duration (start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>The_length_of_sewer__c</fullName>
        <label>The length of sewer</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_query__c</fullName>
        <label>Type of query</label>
        <picklist>
            <picklistValues>
                <fullName>Kanał cyfrowy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tor miedziany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame-Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linia telefoniczna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Łącze analogowe dwuprzewodowe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Łącze analogowe czteroprzewodowe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Query</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q{000000000}</displayFormat>
        <label>Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <recordTypes>
        <fullName>Leasing</fullName>
        <active>true</active>
        <label>Leasing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sewerage</fullName>
        <active>true</active>
        <label>Sewerage</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>